--- a/AppConnectMe/app/build.gradle
+++ b/AppConnectMe/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.lateefazeez.connectmeapp"
+        applicationId "com.sodv3203.connectmeapp"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
