--- a/AppConnectMe/app/build.gradle
+++ b/AppConnectMe/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 
     //Google Sign in Library
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
+
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
     implementation 'com.google.android.material:material:1.1.0'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
