--- a/AppConnectMe/app/src/main/AndroidManifest.xml
+++ b/AppConnectMe/app/src/main/AndroidManifest.xml
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sodv3203.connectmeapp">
+  package="com.sodv3203.connectmeapp">
+
+    <!-- Location Permission -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <!-- Internet Permission -->
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <!-- Location Permission -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+      android:allowBackup="true"
+      android:icon="@mipmap/ic_launcher"
+      android:label="@string/app_name"
+      android:roundIcon="@mipmap/ic_launcher_round"
+      android:supportsRtl="true"
+      android:theme="@style/AppTheme">
 
-        <activity android:name=".LoginActivity"/>
+        <meta-data
+          android:name="com.google.android.geo.API_KEY"
+          android:value="@string/google_maps_key" />
 
+        <activity android:name=".LoginActivity" />
         <activity android:name=".ProfileActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".RegisterActivity" />
-
         <activity android:name=".MainActivity" />
-
     </application>
 
 </manifest>
